--- a/frontend/unity-spa/features/admissions/success.html
+++ b/frontend/unity-spa/features/admissions/success.html
@@ -7,7 +7,7 @@
     Your application has been received successfully. A confirmation email has been sent to your inbox.
     Our Admissions Team will review your submission and contact you for the next steps.
   </p>
-  <a href="#/admissions/apply" class="inline-block px-6 py-2 bg-blue-600 text-white rounded hover:bg-blue-700">
-    Submit Another Application
+  <a ng-if="vm.hash" ng-href="{{ vm.uploadUrl }}" class="inline-block px-6 py-2 bg-blue-600 text-white rounded hover:bg-blue-700">
+    Upload Initial Requirements
   </a>
 </div>
