--- a/frontend/unity-spa/features/registrar/enlistment/enlistment.html
+++ b/frontend/unity-spa/features/registrar/enlistment/enlistment.html
@@ -4,17 +4,21 @@
   <!-- Controls -->
   <div class="grid grid-cols-1 md:grid-cols-4 gap-4">
     <div>
-      <label class="block text-sm font-medium text-gray-700">Student</label>            
-      <select ng-model="vm.studentNumber"
-              ng-options="s.student_number as (s.student_number + ' — ' + s.last_name + ', ' + s.first_name + (s.middle_name ? (' ' + s.middle_name) : '')) for s in vm.students track by s.student_number"
-              ng-change="vm.onStudentSelected()"
-              select2
-              select2-watch="vm.students"
-              select2-allow-clear
-              data-placeholder="Search or select a student..."
-              class="mt-1 block w-full border rounded px-3 py-2">
-        <option value=""></option>
-      </select>
+      <label class="block text-sm font-medium text-gray-700">Student</label>
+      <input
+        type="text"
+        class="mt-1 block w-full border rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
+        placeholder="Search or select a student..."
+        pui-autocomplete
+        ng-model="vm.studentNumber"
+        pui-source="vm.students"
+        pui-item-key="student_number"
+        pui-label="(item.student_number + ' — ' + item.last_name + ', ' + item.first_name + (item.middle_name ? (' ' + item.middle_name) : ''))"
+        pui-on-select="vm.onStudentSelected()"
+        pui-min-chars="1"
+        pui-query-debounce="250"
+        pui-on-query="vm.onStudentQuery($query)"
+      />
     </div>
     <div>
       <label class="block text-sm font-medium text-gray-700">Term</label>
@@ -84,7 +88,200 @@
       </tbody>
     </table>
   </div>
+  <!-- Queue operations -->
+  <div class="bg-white border rounded p-4 space-y-4">
+    <div class="flex items-center justify-between">
+      <h2 class="text-lg font-semibold">Queue Operations</h2>
+      <div class="flex items-center gap-2">
+        <a ng-if="vm.hasChecklist && vm.student_id"
+           class="px-3 py-2 bg-green-600 text-white rounded hover:bg-green-700"
+           href="#/students/{{vm.student_id}}/records?sn={{vm.studentNumber}}"
+           target="_blank">
+          <i class="fas fa-external-link-alt mr-1"></i> View Checklist
+        </a>
+        <button ng-if="!vm.hasChecklist"
+                class="px-3 py-2 bg-green-600 text-white rounded hover:bg-green-700 disabled:opacity-50"
+                ng-click="vm.generateChecklist()"
+                ng-disabled="vm.clGenLoading || !vm.studentNumber">
+          <span ng-if="!vm.clGenLoading"><i class="fas fa-magic mr-1"></i> Generate Checklist</span>
+          <span ng-if="vm.clGenLoading"><i class="fas fa-spinner fa-spin mr-1"></i> Generating...</span>
+        </button>
+        <button class="px-3 py-2 bg-blue-600 text-white rounded hover:bg-blue-700"
+                ng-click="vm.autoQueueFromChecklist()">
+          Auto-Queue from Checklist
+        </button>
+      </div>
+    </div>
 
+    <!-- Add -->
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-4 items-end">
+      <div class="md:col-span-2">
+        <label class="block text-sm font-medium text-gray-700">Add: Select Classlist</label>
+        <select ng-model="vm.selectedAddClasslistId"
+                ng-options="s.intID as s.display for s in vm.filteredSections()"
+                class="mt-1 block w-full border rounded px-3 py-2">
+          <option value="">-- Choose Classlist --</option>
+        </select>
+      </div>
+      <div>
+        <button class="w-full px-4 py-2 bg-green-600 text-white rounded hover:bg-green-700"
+                ng-click="vm.queueAdd()">
+          Queue Add
+        </button>
+      </div>
+    </div>
+
+    <!-- Drop -->
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-4 items-end">
+      <div class="md:col-span-2">
+        <label class="block text-sm font-medium text-gray-700">Drop: Select Current Classlist</label>
+        <select ng-model="vm.selectedDropClasslistId"
+                ng-options="c.classlist_id as (c.code + ' — ' + c.description) for c in vm.filteredCurrent()"
+                class="mt-1 block w-full border rounded px-3 py-2">
+          <option value="">-- Choose Current Classlist --</option>
+        </select>
+      </div>
+      <div>
+        <button class="w-full px-4 py-2 bg-red-600 text-white rounded hover:bg-red-700"
+                ng-click="vm.queueDrop()">
+          Queue Drop
+        </button>
+      </div>
+    </div>
+
+    <!-- Change Section -->
+    <div class="grid grid-cols-1 md:grid-cols-5 gap-4 items-end">
+      <div class="md:col-span-2">
+        <label class="block text-sm font-medium text-gray-700">Change From (Current)</label>
+        <select ng-model="vm.changeFromId"
+                ng-options="c.classlist_id as (c.code + ' — ' + c.description) for c in vm.filteredCurrent()"
+                class="mt-1 block w-full border rounded px-3 py-2">
+          <option value="">-- Choose From --</option>
+        </select>
+      </div>
+      <div class="md:col-span-2">
+        <label class="block text-sm font-medium text-gray-700">Change To (Target)</label>
+        <select ng-model="vm.changeToId"
+                ng-options="s.intID as s.display for s in vm.filteredSections()"
+                class="mt-1 block w-full border rounded px-3 py-2">
+          <option value="">-- Choose To --</option>
+        </select>
+      </div>
+      <div>
+        <button class="w-full px-4 py-2 bg-indigo-600 text-white rounded hover:bg-indigo-700"
+                ng-click="vm.queueChange()">
+          Queue Change
+        </button>
+      </div>
+    </div>
+
+    <!-- Pending ops -->
+    <div class="mt-4">
+      <h3 class="font-semibold mb-2">Pending Operations</h3>
+      <div ng-if="!vm.ops.length" class="text-gray-500">No operations queued.</div>
+      <ul class="space-y-2" ng-if="vm.ops.length">
+        <li class="border rounded px-3 py-2" ng-repeat="op in vm.ops track by $index">
+          <div class="flex items-center justify-between">
+            <div class="font-mono text-sm">
+              <span class="uppercase text-gray-600">{{op.type}}</span>
+              <span ng-if="op.classlist_id"> — classlist_id={{op.classlist_id}}</span>
+              <span ng-if="op.subjectCode"> — {{op.subjectCode}} <span ng-if="op.sectionCode">({{op.sectionCode}})</span></span>
+              <span ng-if="op.from_classlist_id"> — from={{op.from_classlist_id}}</span>
+              <span ng-if="op.to_classlist_id"> — to={{op.to_classlist_id}}</span>
+              <span ng-if="op.fromSubjectCode || op.toSubjectCode">
+                — from: {{op.fromSubjectCode}} <span ng-if="op.fromSectionCode">({{op.fromSectionCode}})</span>
+                → to: {{op.toSubjectCode}} <span ng-if="op.toSectionCode">({{op.toSectionCode}})</span>
+              </span>
+            </div>
+            <button class="px-2 py-1 text-xs bg-gray-200 rounded hover:bg-gray-300" ng-click="vm.removeOpAt($index)">
+              Remove
+            </button>
+          </div>
+          
+          <!-- Prerequisite information for add operations -->
+          <div ng-if="op.type === 'add' && op.prerequisite_check" class="mt-2 text-xs">
+            <div ng-if="op.prerequisite_check.passed" class="text-green-600">
+              <i class="fas fa-check-circle"></i> Prerequisites satisfied
+            </div>
+            <div ng-if="!op.prerequisite_check.passed" class="text-orange-600">
+              <i class="fas fa-exclamation-triangle"></i> Prerequisites not satisfied
+              <div class="mt-1">
+                <span class="font-semibold">Missing:</span>
+                <span ng-repeat="prereq in op.prerequisite_check.missing_prerequisites">
+                  {{prereq.code}}<span ng-if="!$last">, </span>
+                </span>
+              </div>
+            </div>
+            <div ng-if="op.prerequisite_check.all_prerequisites.length > 0" class="mt-1 text-gray-500">
+              <span class="font-semibold">All Prerequisites:</span>
+              <span ng-repeat="prereq in op.prerequisite_check.all_prerequisites">
+                {{prereq.code}}<span ng-if="!$last">, </span>
+              </span>
+            </div>
+          </div>
+        </li>
+      </ul>
+      <div class="mt-3 flex gap-2" ng-if="vm.ops.length">
+        <button class="px-3 py-2 bg-gray-600 text-white rounded hover:bg-gray-700" ng-click="vm.clearOps()">Clear</button>
+        <button class="px-3 py-2 bg-blue-600 text-white rounded hover:bg-blue-700" ng-click="vm.submit()">Submit</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- Results -->
+  <div class="bg-white border rounded p-4" ng-if="vm.results">
+    <h2 class="text-lg font-semibold mb-3">Results</h2>
+    <div class="text-sm mb-2">
+      <span class="font-semibold">Success:</span> {{vm.results.success}} —
+      <span class="font-semibold">Message:</span> {{vm.results.message}}
+    </div>
+    <div class="mb-3">
+      <h3 class="font-semibold">Operations</h3>
+      <table class="min-w-full text-sm">
+        <thead>
+          <tr class="text-left border-b">
+            <th class="py-2 pr-4">Type</th>
+            <th class="py-2 pr-4">OK</th>
+            <th class="py-2 pr-4">Message</th>
+            <th class="py-2 pr-4">Details</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr ng-repeat="r in vm.results.operations" class="border-b">
+            <td class="py-2 pr-4">{{r.type}}</td>
+            <td class="py-2 pr-4">{{r.ok}}</td>
+            <td class="py-2 pr-4">{{r.message}}</td>
+            <td class="py-2 pr-4">
+              <pre class="text-xs bg-gray-50 p-2 rounded">{{r.details | json}}</pre>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
+    <div>
+      <h3 class="font-semibold">Current After Operations</h3>
+      <table class="min-w-full text-sm" ng-if="vm.results.current.length">
+        <thead>
+          <tr class="text-left border-b">
+            <th class="py-2 pr-4">Code</th>
+            <th class="py-2 pr-4">Description</th>
+            <th class="py-2 pr-4">Units</th>
+            <th class="py-2 pr-4">Classlist ID</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr ng-repeat="c in vm.results.current" class="border-b">
+            <td class="py-2 pr-4 font-mono">{{c.code}}</td>
+            <td class="py-2 pr-4">{{c.description}}</td>
+            <td class="py-2 pr-4">{{c.units}}</td>
+            <td class="py-2 pr-4 font-mono">{{c.classlist_id}}</td>
+          </tr>
+        </tbody>
+      </table>
+      <div ng-if="!vm.results.current.length" class="text-gray-500">No current enlisted after operations.</div>
+    </div>
+  </div>
   <!-- Registration Details -->
   <div class="bg-white border rounded p-4 space-y-4">
     <div class="flex items-center justify-between">
@@ -126,7 +323,7 @@
           <div>
             <div class="text-gray-500 uppercase text-xs">Curriculum</div>
             <div class="font-medium">
-              {{ vm.curriculumLabel(vm.findCurriculumById(vm.registration.current_curriculum)) || '—' }}
+              {{ vm.registration.curriculum_name || '—' }}
             </div>
           </div>
           <div>
@@ -242,7 +439,7 @@
       </div>
     </div>
   </div>
-
+  
   <!-- Tuition Details -->
   <div class="bg-white border rounded p-4 space-y-4">
     <div class="flex items-center justify-between">
@@ -486,183 +683,5 @@
     </div>
   </div>
 
-  <!-- Queue operations -->
-  <div class="bg-white border rounded p-4 space-y-4">
-    <div class="flex items-center justify-between">
-      <h2 class="text-lg font-semibold">Queue Operations</h2>
-      <button class="px-3 py-2 bg-blue-600 text-white rounded hover:bg-blue-700"
-              ng-click="vm.autoQueueFromChecklist()">
-        Auto-Queue from Checklist
-      </button>
-    </div>
-
-    <!-- Add -->
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-4 items-end">
-      <div class="md:col-span-2">
-        <label class="block text-sm font-medium text-gray-700">Add: Select Classlist</label>
-        <select ng-model="vm.selectedAddClasslistId"
-                ng-options="s.intID as s.display for s in vm.filteredSections()"
-                class="mt-1 block w-full border rounded px-3 py-2">
-          <option value="">-- Choose Classlist --</option>
-        </select>
-      </div>
-      <div>
-        <button class="w-full px-4 py-2 bg-green-600 text-white rounded hover:bg-green-700"
-                ng-click="vm.queueAdd()">
-          Queue Add
-        </button>
-      </div>
-    </div>
-
-    <!-- Drop -->
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-4 items-end">
-      <div class="md:col-span-2">
-        <label class="block text-sm font-medium text-gray-700">Drop: Select Current Classlist</label>
-        <select ng-model="vm.selectedDropClasslistId"
-                ng-options="c.classlist_id as (c.code + ' — ' + c.description) for c in vm.filteredCurrent()"
-                class="mt-1 block w-full border rounded px-3 py-2">
-          <option value="">-- Choose Current Classlist --</option>
-        </select>
-      </div>
-      <div>
-        <button class="w-full px-4 py-2 bg-red-600 text-white rounded hover:bg-red-700"
-                ng-click="vm.queueDrop()">
-          Queue Drop
-        </button>
-      </div>
-    </div>
-
-    <!-- Change Section -->
-    <div class="grid grid-cols-1 md:grid-cols-5 gap-4 items-end">
-      <div class="md:col-span-2">
-        <label class="block text-sm font-medium text-gray-700">Change From (Current)</label>
-        <select ng-model="vm.changeFromId"
-                ng-options="c.classlist_id as (c.code + ' — ' + c.description) for c in vm.filteredCurrent()"
-                class="mt-1 block w-full border rounded px-3 py-2">
-          <option value="">-- Choose From --</option>
-        </select>
-      </div>
-      <div class="md:col-span-2">
-        <label class="block text-sm font-medium text-gray-700">Change To (Target)</label>
-        <select ng-model="vm.changeToId"
-                ng-options="s.intID as s.display for s in vm.filteredSections()"
-                class="mt-1 block w-full border rounded px-3 py-2">
-          <option value="">-- Choose To --</option>
-        </select>
-      </div>
-      <div>
-        <button class="w-full px-4 py-2 bg-indigo-600 text-white rounded hover:bg-indigo-700"
-                ng-click="vm.queueChange()">
-          Queue Change
-        </button>
-      </div>
-    </div>
-
-    <!-- Pending ops -->
-    <div class="mt-4">
-      <h3 class="font-semibold mb-2">Pending Operations</h3>
-      <div ng-if="!vm.ops.length" class="text-gray-500">No operations queued.</div>
-      <ul class="space-y-2" ng-if="vm.ops.length">
-        <li class="border rounded px-3 py-2" ng-repeat="op in vm.ops track by $index">
-          <div class="flex items-center justify-between">
-            <div class="font-mono text-sm">
-              <span class="uppercase text-gray-600">{{op.type}}</span>
-              <span ng-if="op.classlist_id"> — classlist_id={{op.classlist_id}}</span>
-              <span ng-if="op.subjectCode"> — {{op.subjectCode}} <span ng-if="op.sectionCode">({{op.sectionCode}})</span></span>
-              <span ng-if="op.from_classlist_id"> — from={{op.from_classlist_id}}</span>
-              <span ng-if="op.to_classlist_id"> — to={{op.to_classlist_id}}</span>
-              <span ng-if="op.fromSubjectCode || op.toSubjectCode">
-                — from: {{op.fromSubjectCode}} <span ng-if="op.fromSectionCode">({{op.fromSectionCode}})</span>
-                → to: {{op.toSubjectCode}} <span ng-if="op.toSectionCode">({{op.toSectionCode}})</span>
-              </span>
-            </div>
-            <button class="px-2 py-1 text-xs bg-gray-200 rounded hover:bg-gray-300" ng-click="vm.removeOpAt($index)">
-              Remove
-            </button>
-          </div>
-          
-          <!-- Prerequisite information for add operations -->
-          <div ng-if="op.type === 'add' && op.prerequisite_check" class="mt-2 text-xs">
-            <div ng-if="op.prerequisite_check.passed" class="text-green-600">
-              <i class="fas fa-check-circle"></i> Prerequisites satisfied
-            </div>
-            <div ng-if="!op.prerequisite_check.passed" class="text-orange-600">
-              <i class="fas fa-exclamation-triangle"></i> Prerequisites not satisfied
-              <div class="mt-1">
-                <span class="font-semibold">Missing:</span>
-                <span ng-repeat="prereq in op.prerequisite_check.missing_prerequisites">
-                  {{prereq.code}}<span ng-if="!$last">, </span>
-                </span>
-              </div>
-            </div>
-            <div ng-if="op.prerequisite_check.all_prerequisites.length > 0" class="mt-1 text-gray-500">
-              <span class="font-semibold">All Prerequisites:</span>
-              <span ng-repeat="prereq in op.prerequisite_check.all_prerequisites">
-                {{prereq.code}}<span ng-if="!$last">, </span>
-              </span>
-            </div>
-          </div>
-        </li>
-      </ul>
-      <div class="mt-3 flex gap-2" ng-if="vm.ops.length">
-        <button class="px-3 py-2 bg-gray-600 text-white rounded hover:bg-gray-700" ng-click="vm.clearOps()">Clear</button>
-        <button class="px-3 py-2 bg-blue-600 text-white rounded hover:bg-blue-700" ng-click="vm.submit()">Submit</button>
-      </div>
-    </div>
-  </div>
-
-  <!-- Results -->
-  <div class="bg-white border rounded p-4" ng-if="vm.results">
-    <h2 class="text-lg font-semibold mb-3">Results</h2>
-    <div class="text-sm mb-2">
-      <span class="font-semibold">Success:</span> {{vm.results.success}} —
-      <span class="font-semibold">Message:</span> {{vm.results.message}}
-    </div>
-    <div class="mb-3">
-      <h3 class="font-semibold">Operations</h3>
-      <table class="min-w-full text-sm">
-        <thead>
-          <tr class="text-left border-b">
-            <th class="py-2 pr-4">Type</th>
-            <th class="py-2 pr-4">OK</th>
-            <th class="py-2 pr-4">Message</th>
-            <th class="py-2 pr-4">Details</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr ng-repeat="r in vm.results.operations" class="border-b">
-            <td class="py-2 pr-4">{{r.type}}</td>
-            <td class="py-2 pr-4">{{r.ok}}</td>
-            <td class="py-2 pr-4">{{r.message}}</td>
-            <td class="py-2 pr-4">
-              <pre class="text-xs bg-gray-50 p-2 rounded">{{r.details | json}}</pre>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-
-    <div>
-      <h3 class="font-semibold">Current After Operations</h3>
-      <table class="min-w-full text-sm" ng-if="vm.results.current.length">
-        <thead>
-          <tr class="text-left border-b">
-            <th class="py-2 pr-4">Code</th>
-            <th class="py-2 pr-4">Description</th>
-            <th class="py-2 pr-4">Units</th>
-            <th class="py-2 pr-4">Classlist ID</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr ng-repeat="c in vm.results.current" class="border-b">
-            <td class="py-2 pr-4 font-mono">{{c.code}}</td>
-            <td class="py-2 pr-4">{{c.description}}</td>
-            <td class="py-2 pr-4">{{c.units}}</td>
-            <td class="py-2 pr-4 font-mono">{{c.classlist_id}}</td>
-          </tr>
-        </tbody>
-      </table>
-      <div ng-if="!vm.results.current.length" class="text-gray-500">No current enlisted after operations.</div>
-    </div>
-  </div>
+  
 </div>
