--- a/frontend/unity-spa/index.html
+++ b/frontend/unity-spa/index.html
@@ -41,6 +41,8 @@
   <!-- AngularJS 1.x and ngRoute -->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.3/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.3/angular-route.min.js"></script>
+  <!-- ng-file-upload for file uploads -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/danialfarid-angular-file-upload/12.2.13/ng-file-upload-all.min.js"></script>
   <!-- Chart.js for analytics visualizations -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
   <!-- SweetAlert2 for nicer confirms/alerts -->
@@ -259,14 +261,21 @@
   <script src="features/student-dashboard/student-dashboard.controller.js"></script>
   <!-- Admissions application feature -->
   <script src="features/admissions/apply.controller.js"></script>
+  <script src="features/admissions/success.controller.js"></script>
   <!-- Admissions: Requirements CRUD -->
   <script src="features/admissions/requirements/requirements.service.js"></script>
   <script src="features/admissions/requirements/requirements.controller.js"></script>
+  <!-- Admissions: Initial Requirements (Public) -->
+  <script src="features/admissions/initial-requirements/initial-requirements.service.js"></script>
+  <script src="features/admissions/initial-requirements/initial-requirements.controller.js"></script>
   <!-- Admissions: Previous Schools CRUD -->
   <script src="features/admissions/previous-schools/previous-schools.service.js"></script>
   <script src="features/admissions/previous-schools/previous-schools.controller.js"></script>
+  <!-- Admissions: Interviews Service -->
+  <script src="features/admissions/interviews/interviews.service.js"></script>
   <!-- Admissions: Applicants (List + View) -->
   <script src="features/admissions/applicants/applicants.service.js"></script>
+  <script src="features/admissions/applicants/journey.service.js"></script>
   <script src="features/admissions/applicants/applicants.controller.js"></script>
   <!-- Admissions: Applicants Analytics -->
   <script src="features/admissions/applicants/analytics.service.js"></script>
@@ -345,11 +354,11 @@
   <script src="features/registrar/enlistment/enlistment.controller.js"></script>
 </head>
 <body class="bg-gray-50 min-h-screen">
-  <!-- Global header -->
-  <app-header></app-header>
+  <!-- Global header (hidden on public upload pages) -->
+  <app-header ng-if="!hideChrome"></app-header>
 
-  <!-- Sidebar -->
-  <app-sidebar></app-sidebar>
+  <!-- Sidebar (hidden on public upload pages) -->
+  <app-sidebar ng-if="!hideChrome"></app-sidebar>
 
   <!-- Route outlet -->
   <div class="main-content container mx-auto px-4 py-10">
