--- a/frontend/unity-spa/features/registrar/enlistment/enlistment.html
+++ b/frontend/unity-spa/features/registrar/enlistment/enlistment.html
@@ -122,6 +122,14 @@
                 class="mt-1 block w-full border rounded px-3 py-2">
           <option value="">-- Choose Classlist --</option>
         </select>
+        <div class="text-xs mt-1">
+          <span class="text-gray-500">Remaining:</span>
+          <span ng-class="{
+            'text-green-600 font-semibold': (vm.selectedAddRemaining() || 0) > 0,
+            'text-red-600 font-semibold': vm.selectedAddRemaining() === 0,
+            'text-gray-500': vm.selectedAddRemaining() === null
+          }">{{ vm.selectedAddRemaining() === null ? '—' : vm.selectedAddRemaining() }}</span>
+        </div>
       </div>
       <div>
         <button class="w-full px-4 py-2 bg-green-600 text-white rounded hover:bg-green-700"
