--- a/frontend/unity-spa/index.html
+++ b/frontend/unity-spa/index.html
@@ -352,6 +352,9 @@
   <script src="features/registrar/registration-viewer/registration-viewer.controller.js"></script>
   <!-- Registrar Enlistment feature -->
   <script src="features/registrar/enlistment/enlistment.controller.js"></script>
+  <!-- Registrar Sections & Slots Monitor -->
+  <script src="features/registrar/sections-slots/sections-slots.service.js"></script>
+  <script src="features/registrar/sections-slots/sections-slots.controller.js"></script>
 </head>
 <body class="bg-gray-50 min-h-screen">
   <!-- Global header (hidden on public upload pages) -->
