--- a/frontend/unity-spa/index.html
+++ b/frontend/unity-spa/index.html
@@ -205,6 +205,7 @@
   <script src="core/routes.js"></script>
   <script src="core/run.js"></script>
   <script src="core/toast.service.js"></script>
+  <script src="core/system-alerts.service.js"></script>
 
   <!-- Shared components -->
   <script src="shared/components/header/header.controller.js"></script>
@@ -319,6 +320,10 @@
   <script src="features/grading/grading.service.js"></script>
   <script src="features/grading/grading.controller.js"></script>
 
+  <!-- Academics: Faculty Loading -->
+  <script src="features/academics/faculty-loading/faculty-loading.service.js"></script>
+  <script src="features/academics/faculty-loading/faculty-loading.controller.js"></script>
+
   <!-- Tuition Years feature (Finance) -->
   <script src="features/tuition-years/tuition-years.service.js"></script>
   <script src="features/tuition-years/tuition-years.controller.js"></script>
@@ -343,6 +348,7 @@
   <script src="features/admin/invoices/invoices.service.js"></script>
   <script src="features/admin/invoices/invoices.controller.js"></script>
   <script src="features/admin/invoices/invoice-edit.controller.js"></script>
+  <script src="features/admin/system-alerts/system-alerts.controller.js"></script>
 
   <!-- Unity feature -->
   <script src="features/unity/unity.service.js"></script>
