feat: Implement room scheduling feature with CRUD operations
- Added SchedulesController to manage schedule views and interactions.
- Created schedules.html for the user interface, including search and filter functionalities.
- Developed SchedulesService for API interactions related to schedules.
- Implemented ScheduleController in the Laravel API to handle schedule data, including validation and conflict checking.
- Added methods for listing, creating, updating, and deleting schedules.
- Integrated classroom data retrieval and display in the schedule management interface.
- Enhanced error handling and user feedback through toast notifications.

--- a/frontend/unity-spa/index.html
+++ b/frontend/unity-spa/index.html
@@ -321,6 +321,10 @@
   <script src="features/classrooms/classrooms.service.js"></script>
   <script src="features/classrooms/classrooms.controller.js"></script>
 
+  <!-- Schedules feature -->
+  <script src="features/schedules/schedules.service.js"></script>
+  <script src="features/schedules/schedules.controller.js"></script>
+
   <!-- Grading Systems feature -->
   <script src="features/grading/grading.service.js"></script>
   <script src="features/grading/grading.controller.js"></script>
