--- a/frontend/unity-spa/features/classlists/edit.html
+++ b/frontend/unity-spa/features/classlists/edit.html
@@ -63,8 +63,8 @@
       <!-- Section Code -->
       <div>
         <label class="block text-sm font-medium text-gray-700 mb-1">Section Code</label>
-        <input type="text" class="w-full border rounded px-3 py-2" ng-model="vm.model.sectionCode" maxlength="50" placeholder="e.g. CS202-BSCS2A-1-A">
-        <p class="text-xs text-gray-500 mt-1">Optional. Saved to sectionCode. Note: strClassName, year, strSection, sub_section are not used.</p>
+        <input type="text" class="w-full border rounded px-3 py-2" ng-model="vm.model.sectionCode" maxlength="50" placeholder="e.g. MMA11">
+        <p class="text-xs text-gray-500 mt-1">Note: This will be used for block sectioning</p>
       </div>
 
       <!-- Finalized -->
