--- a/frontend/unity-spa/index.html
+++ b/frontend/unity-spa/index.html
@@ -358,6 +358,7 @@
   <script src="features/registrar/registration-viewer/registration-viewer.controller.js"></script>
   <!-- Registrar Enlistment feature -->
   <script src="features/registrar/enlistment/enlistment.controller.js"></script>
+  <script src="features/registrar/enlistment/enlistment-applicants.controller.js"></script>
   <!-- Registrar Sections & Slots Monitor -->
   <script src="features/registrar/sections-slots/sections-slots.service.js"></script>
   <script src="features/registrar/sections-slots/sections-slots.controller.js"></script>
